--- a/style.css
+++ b/style.css
@@ -7,3 +7,9 @@ border-radius: 25px;
 padding-top: 25;
 padding-bottom: 25;
 }
+
+#style {
+  color: green;
+  background-color: black;
+  border-radius: 25px;
+}
